[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/zvuki-klaviatury-elektricheskoj-pechatnoj-mashinki.mp3" type="AudioStream" id=1]
[ext_resource path="res://resources/PixelRPG.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Message_typing.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[node name="Message_typing" type="Node"]
script = ExtResource( 3 )

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 25.0
margin_top = -8.0
margin_right = -27.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[node name="Typing_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
